[package]
name = "hole_punch"
version = "0.1.0"
authors = ["Bastian Köcher <git@kchr.de>"]
edition = "2018"

[dependencies]
pnet_datalink = "0.21"
tokio = "0.1"
serde_json = "1.0"
serde_derive = "1.0"
serde = "^1.0.66"
futures = "0.1"
tokio-serde-json = "0.2"
itertools = "0.8"
state_machine_future = "0.2"
bytes = "0.4"
log = "0.4"
picoquic = { git = "https://github.com/bkchr/picoquic-rs.git" }
rand = "0.6"
either = "1.4"
objekt = "0.1"
failure = "0.1"
openssl = "^0.10.6"
openssl-sys = "^0.9.28"
hex = "0.3"

[dev-dependencies]
pretty_env_logger = "0.3"
