[package]
name = "hole_punch"
version = "0.1.0"
authors = ["Bastian Köcher <git@kchr.de>"]
edition = "2018"

[dependencies]
pnet_datalink = "0.22"
tokio = "0.1"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0.94"
futures = "0.1.28"
tokio-serde-json = "0.2"
itertools = "0.8"
state_machine_future = "0.2"
bytes = "0.4"
log = "0.4"
picoquic = { git = "https://github.com/bkchr/picoquic-rs.git" }
rand = "0.7.2"
either = "1.5.2"
objekt = "0.1"
failure = "0.1"
openssl = "0.10.23"
openssl-sys = "0.9.47"
hex = "0.3"
mdns = { git = "https://github.com/bkchr/mdns.git", branch = "tokio_rewrite" }
libmdns = { git = "https://github.com/bkchr/libmdns.git", branch = "babyphone" }
lru_time_cache = "0.9.0"
parking_lot = "0.9.0"
trust-dns-resolver = "0.12.0"
url = "2.1.0"

[dev-dependencies]
pretty_env_logger = "0.3"
