[package]
name = "runners"
version = "0.1.0"
authors = ["Bastian Köcher <git@kchr.de>"]

[dependencies]
hole_punch = { path = "../../" }
futures = "0.1"
serde_derive = "1.0"
structopt = "0.2"
tokio-core = "0.1"
serde = "1.0"
timebomb = "0.1.2"
tokio-io = "0.1"
tokio-serde-json = { git = "https://github.com/carllerche/tokio-serde-json.git" }
